--- a/DevelopexFinal/MainWindow.xaml
+++ b/DevelopexFinal/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DevelopexFinal"
         mc:Ignorable="d"
+        Closing="Window_Closing"
         Title="MainWindow" Height="350" Width="525">
     <Grid >
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" FontSize="16" Text="Url" VerticalAlignment="Top"/>
